Java9 support (#6)
* Add bin directory under api-server which is required by maven

* Sample data for the sample iris project

* Revert "Add bin directory under api-server which is required by maven"

This reverts commit 49ead923474388afe659b98c4bd591cc1d73c652.

* Merged from master

* Remove GC_OPTS for the latest JVM

* Java 9~ support, build and package test required

* Upgrade jackson core to 2.9.5 due tu security issues

* Remove opensource profile and set this as default