@@ -20,8 +20,8 @@ if "%ACCESS_TOKEN%"=="" (
 	EXIT /b 1
 )
 
-SET GC_OPTS=-XX:+UseConcMarkSweepGC -verbose:gc -XX:+PrintGCTimeStamps -Xloggc:"%BRIGHTICS_SERVER_HOME%gc.out" -XX:MaxMetaspaceSize=512m -XX:+CMSClassUnloadingEnabled
-SET JAVA_OPTS=-Xms1g -Xmx2g -XX:+HeapDumpOnOutOfMemoryError -Djava.net.preferIPv4Stack=true -Djava.io.tmpdir="%BRIGHTICS_SERVER_HOME%tmp" -Dbrightics.local.token=%ACCESS_TOKEN% -Dbrightics.local.user=%USER_ID% 
+SET GC_OPTS=-XX:+UseConcMarkSweepGC -verbose:gc --Xloggc:"%BRIGHTICS_SERVER_HOME%gc.out" -XX:+CMSClassUnloadingEnabled
+SET JAVA_OPTS=-Xms1g -Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Djava.net.preferIPv4Stack=true -Djava.io.tmpdir="%BRIGHTICS_SERVER_HOME%tmp" -Dbrightics.local.token=%ACCESS_TOKEN% -Dbrightics.local.user=%USER_ID% 
 SET MAIN=org.springframework.boot.loader.JarLauncher -Dspring.config.location="%BRIGHTICS_SERVER_HOME%BOOT-INF\classes\" 
 
 IF EXIST "%BRIGHTICS_SERVER_HOME%tmp" (
@@ -30,7 +30,7 @@ IF EXIST "%BRIGHTICS_SERVER_HOME%tmp" (
 
 mkdir "%BRIGHTICS_SERVER_HOME%tmp"
 
-java %GC_OPTS% %JAVA_OPTS% -classpath . %MAIN% 
+java %JAVA_OPTS% -classpath . %MAIN% 
 
 :usage
 echo Usage: %~n0 USER_ID ACCESS_TOKEN
